#485: Allow anyone to execute GetEntityLongRange UC